fixed spacing between rows

--- a/src/Card/Card.css
+++ b/src/Card/Card.css
@@ -1,10 +1,15 @@
 card-text {
+  font-size: 3vw;
+  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  overflow: none;
+  width: 100%;
+  height: auto;
+  text-align: center;
   white-space: nowrap;
 }
 
 .pokemon-card {
   background-color: #ffffff;
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   border: none;
   text-align: center;
   width: 100%;
